[전남대 3팀_BE] 5차 코드 리뷰 (#95)
* feat: 리프레쉬 토큰을 통한 액세스 토큰 재발급 구현 및 로그아웃 API 구현 (#78)

* feat: 링크 검사 서비스 추가

* feat: Member 엔티티에 refreshToken 필드 추가

* feat: 리프레쉬 토큰 발급 및 업데이트 로직 추가

* feat: 액세스 토큰 재발급 로직 구현

* feat: 로그아웃 API 구현

* feat: 스웨거 API 추가

* feat: 로그인된 사용자 정보 조회 API 구현

* fix: 리베이스 과정 중 발생한 충돌 해결

---------

Co-authored-by: SeungWon <212329@jnu.ac.kr>

* feat: Validation 검증 실패 시 발생하는 MethodArgumentNotValidException 처리 (#77)

* feat: 링크 검사 서비스 추가

* feat: 필드에 대한 상세 오류 정보를 담기 위한 FieldErrorDetail DTO 추가

* feat: ErrorResponse에 List<FieldErrorDetail> 추가

* feat: 전역예외처리기에 MethodArgumentNotValidException 처리 로직 추가

* fix: Rebase 중 다시 생긴 파일 삭제

---------

Co-authored-by: SeungWon <212329@jnu.ac.kr>

* feat: 피드 북마크 토글 기능 구현 및 취미 팩 북마크 토글 기능 버그 수정 (#76)

* feat: 링크 검사 서비스 추가

* feat: 피드 북마크를 위한 FeedBookmark 엔티티 추가 및 schema-h2.sql에 feed_bookmark 테이블 추가

* feat: Feed 엔티티에 bookmarkCount 속성 추가 및 schema-h2.sql의 feed 테이블 변경

* fix: PackRepository에 @Modifying 어노테이션 누락 부분 추가

* fix: PackService의 toggleBookmark에 @Transactional 누락 부분 추가

* feat: FeedResponseDto에 bookmarkCount 추가

* feat: 사용자가 북마크 토글을 눌렀을 때의 반환을 위한 FeedBookmarkResponseDto 추가

* feat: 사용자 피드 북마크 토글 기능 추가

* feat: MySql 스키마 수정

* fix: Rebase 중 다시 생긴 파일 삭제

---------

Co-authored-by: SeungWon <212329@jnu.ac.kr>

* refactor: 메모리 사용량 최적화 (#79)

* feat: 카테고리 전체조회 기능 구현 (#80)

* feat: 카테고리 전체조회 기능 구현

* refactor: 카테고리 조회 응답결과에서 src 제거

* refactor: LinkModerationService HTML 태그 제거 로직에 Apache Commons Text 라이브러리 적용 (#81)

* feat: 카카오 로그인 API 구현 (#82)

* feat: 카카오 로그인 API 구현

* feat: PUBLIC_URL에 콜백 주소 추가

* feat: 카카오 로그인 시 MemberCreationRequestDto 변환 추가

* feat: 카카오 서버로부터 응답을 받아올 DTO 추가

* feat: 웹 클라이언트 사용을 위한 의존성 추가

* feat: 환경변수 추가

* feat: applcation-prod.yml에도 security 패스 추가

* refactor: 변경된 기획에 따른 Feed 리팩토링 (#83)

* refactor: Feed 엔티티의 속성에서 FeedType 제거 및 OneToMany로 되어 있던 FeedProduct 리스트 제거

* refactor: Enum 타입의 FeedType, 연관 관계를 나타내는 FeedProduct 클래스 제거

* refactor: 피드 상세보기에서 사용하는 FeedResponseDto 리팩토링

* refactor: 피드 전체조회에서